FIXED IMAGE AND TEXT SPACING

--- a/src/components/Middle/TrainingProgramPage/trainingProgramPage.css
+++ b/src/components/Middle/TrainingProgramPage/trainingProgramPage.css
@@ -26,7 +26,7 @@
 }
 .programRows{
     display:flex;
-    justify-content:space-between;
+    justify-content:space-evenly;
     align-items:center;
     width:90vw;
     border-color:black;
